# SKOOTR_urdf

cone_mirror/Cone Mirror/: Cone_shelf v1.stl  Papers.docx  Screencast.webm  Takeaways.docx  cone_h50_r10 v1.stl  cone_h50_r100_updated v0.stl  cone_h50_r110_updated v1.stl  cone_h50_r15 v1.stl  cone_h50_r20 v1.stl  cone_h50_r25 v1.stl  cone_h50_r40_updated v1.stl  cone_h50_r45_updated v1.stl  cone_h50_r50 v1.stl  cone_h50_r50 v2.stl  cone_h50_r50_updated v0stl.stl  cone_h50_r55_updated v1.stl  cone_h50_r60_updated v1.stl  cone_h50_r65_updated v1.stl  cone_h50_r7 v1.stl  cone_h50_r70_updated v1.stl  cone_h50_r75_updated v0.stl  cone_h50_r80_updated v1.stl  cone_h50_r85_updated v1.stl  cone_h50_r90_updated v1.stl  cone_h50_r95_updated v1.stl  formulae and figures.docx  holder v1.stl
cone_mirror/Cone mirror codes/: cam_cali.py  cam_cali_sbs.py  cam_take.py  cam_test.py  cam_test_new.py  extract_polar.py  new_center.py  notes.md  (+4 more)
simulation/: movement.old.py  movement.py  movement.shuffling.py  movement.simplified.py  movement.skating.py  shuffling.py  simulation.old.py  simulation.py  simulation.simplified.py  skootr.scaled.urdf  skootr.urdf  skootr_heavy_base.urdf  skootr_move.urdf  skootr_simplified.urdf
urdf/skootr_simulation/: package.xml  setup.cfg  setup.py
urdf/skootr_simulation/launch/: skootr.launch.py
urdf/skootr_simulation/meshes/frame/: hemisphere.stl  servo_hub_bottom.stl  servo_mount_60kg.stl  triconstraint.stl
urdf/skootr_simulation/meshes/non_printed/: metal_bearing.stl  pusher_servo.stl
urdf/skootr_simulation/urdf/: frame.xacro  legs.xacro
(+31 files in other folders)
