<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skootr_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jack@todo.todo">jack</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>skootr_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
